--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        div {
+            font-family: monospace;
+        }
+    </style>
     <title>Pizza Hut</title>
 </head>
 <body>
@@ -26,7 +31,7 @@
     <hr>
 
     <p>If you would like to order a pizza to be delivered, please provide the following information:</p>
-    <div style="font-family: monospace">
+    <div>
         <label for="name">Name</label>
         <input type="text" id="name" style="margin-left: 170px; width: 210px">
         <br>
@@ -34,8 +39,8 @@
         <input type="text" id="street-address" style="margin-left: 92px; width: 210px">
         <br>
         <label for="phone-number">Voice Phone &nbsp###-###-####</label>
-        <input type="tel" id="phone-number" style="margin-left: 6.5px; width: 105px"> (where we can reach you)<br>
-        <button style="margin-left: 227px">Continue</button>
+        <input type="tel" id="phone-number" style="margin-left: 6px; width: 105px"> (where we can reach you)<br>
+        <button style="margin-left: 229px">Continue</button>
     </div>
     <hr>
     <br>
